--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
         <section id="song">
             <h2>Link to a Song</h2>
             <br />
-            <iframe class="qr-and-video" width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
-            </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/MmZexg8sxyk?si=4zxyz-Rdq4LJQA0P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
         <br />
         <section id="qr-code">
